--- a/remill/Arch/X86/Runtime/CMakeLists.txt
+++ b/remill/Arch/X86/Runtime/CMakeLists.txt
@@ -33,6 +33,40 @@ function(add_runtime_helper target_name address_bit_size enable_avx enable_avx51
     BCFLAGS -std=c++11
     INCLUDEDIRECTORIES "${CMAKE_SOURCE_DIR}"
     INSTALLDESTINATION "share/remill/${REMILL_LLVM_VERSION}/semantics"
+
+    DEPENDENCIES
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/CONVERT.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/POP.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/BITBYTE.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/PREFETCH.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/XSAVE.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/MMX.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/SEMAPHORE.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/SYSCALL.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/FMA.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/SSE.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/BINARY.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/SHIFT.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/PUSH.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/AVX.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/DATAXFER.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/XOP.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/STRINGOP.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/ROTATE.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/CMOV.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/FLAGOP.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/UNCOND_BR.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/NOP.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/RTM.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/DECIMAL.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/CALL_RET.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/MISC.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/FLAGS.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/LOGICAL.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/SYSTEM.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/X87.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/COND_BR.cpp"
+    "${CMAKE_SOURCE_DIR}/remill/Arch/X86/Semantics/INTERRUPT.cpp"
   )
 endfunction()
 
