--- a/remill/Arch/X86/Runtime/CMakeLists.txt
+++ b/remill/Arch/X86/Runtime/CMakeLists.txt
@@ -80,7 +80,7 @@ add_runtime_helper(x86 32 0 0)
 add_runtime_helper(x86_avx 32 1 0)
 add_runtime_helper(x86_avx512 32 1 1)
 
-if(${IS_AMD64_MACHINE})
+if(CMAKE_SIZEOF_VOID_P EQUAL 8)
   add_runtime_helper(amd64 64 0 0)
   add_runtime_helper(amd64_avx 64 1 0)
   add_runtime_helper(amd64_avx512 64 1 1)
