CMake: Generate the semantics path in remillConfig.cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,13 +84,17 @@ endif()
 #
 
 if(DEFINED WIN32)
-  list(APPEND PROJECT_DEFINITIONS "REMILL_INSTALL_SEMANTICS_DIR=\"${install_folder}/${REMILL_LLVM_VERSION}/semantics/\"")
+  set(REMILL_INSTALL_SEMANTICS_DIR "${install_folder}/${REMILL_LLVM_VERSION}/semantics/")
 else()
-  list(APPEND PROJECT_DEFINITIONS "REMILL_INSTALL_SEMANTICS_DIR=\"${CMAKE_INSTALL_PREFIX}/share/remill/${REMILL_LLVM_VERSION}/semantics/\"")
+  set(REMILL_INSTALL_SEMANTICS_DIR "${install_folder}/share/remill/${REMILL_LLVM_VERSION}/semantics/")
 endif()
 
-list(APPEND PROJECT_DEFINITIONS "REMILL_BUILD_SEMANTICS_DIR_X86=\"${CMAKE_CURRENT_BINARY_DIR}/remill/Arch/X86/Runtime/\"")
-list(APPEND PROJECT_DEFINITIONS "REMILL_BUILD_SEMANTICS_DIR_AARCH64=\"${CMAKE_CURRENT_BINARY_DIR}/remill/Arch/AArch64/Runtime/\"")
+set(REMILL_BUILD_SEMANTICS_DIR_X86 "${CMAKE_CURRENT_BINARY_DIR}/remill/Arch/X86/Runtime/")
+set(REMILL_BUILD_SEMANTICS_DIR_AARCH64 "${CMAKE_CURRENT_BINARY_DIR}/remill/Arch/AArch64/Runtime/")
+
+list(APPEND PROJECT_DEFINITIONS "REMILL_INSTALL_SEMANTICS_DIR=\"${REMILL_INSTALL_SEMANTICS_DIR}/\"")
+list(APPEND PROJECT_DEFINITIONS "REMILL_BUILD_SEMANTICS_DIR_X86=\"${REMILL_BUILD_SEMANTICS_DIR_X86}\"")
+list(APPEND PROJECT_DEFINITIONS "REMILL_BUILD_SEMANTICS_DIR_AARCH64=\"${REMILL_BUILD_SEMANTICS_DIR_AARCH64}\"")
 
 add_library(${PROJECT_NAME} STATIC
   remill/Arch/AArch64/Arch.cpp
@@ -245,7 +249,12 @@ install(TARGETS "${PROJECT_NAME}"
   PUBLIC_HEADER DESTINATION "${install_folder}/include"
 )
 
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/cmake/remillConfig.cmake"
+configure_file(
+  "${CMAKE_CURRENT_SOURCE_DIR}/cmake/remillConfig.cmake.in"
+  "${CMAKE_CURRENT_BINARY_DIR}/remillConfig.cmake"
+)
+
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/remillConfig.cmake"
   DESTINATION "${install_folder}/lib"
 )
 
