CMake: Only use C++14 when compiling on Windows

--- a/remill/Arch/AArch64/Runtime/CMakeLists.txt
+++ b/remill/Arch/AArch64/Runtime/CMakeLists.txt
@@ -32,11 +32,18 @@ endif()
 function(add_runtime_helper target_name address_bit_size little_endian)
   message(" > Generating runtime target: ${target_name}")
 
+  # Visual C++ requires C++14
+  if(WIN32)
+    set(required_cpp_standard "c++14")
+  else()
+    set(required_cpp_standard "c++11")
+  endif()
+
   add_runtime(${target_name}
     SOURCES ${ARMRUNTIME_SOURCEFILES}
     ADDRESS_SIZE ${address_bit_size}
     DEFINITIONS "LITTLE_ENDIAN=${little_endian}"
-    BCFLAGS -std=c++14
+    BCFLAGS "-std=${required_cpp_standard}"
     INCLUDEDIRECTORIES "${CMAKE_SOURCE_DIR}"
     INSTALLDESTINATION "${install_folder}"
 
